--- a/web/upload/src/main/webapp/WEB-INF/templates/upload.html
+++ b/web/upload/src/main/webapp/WEB-INF/templates/upload.html
@@ -6,6 +6,7 @@
 <form action="" method="post" enctype="multipart/form-data">
     <h3>Select xml file to upload</h3>
     <p>
+        <label for="pageSize">pageSize</label><input name="pageSize" id="pageSize"><br/>
         <input type="file" name="fileToUpload" id="fileToUpload"><br/>
     </p>
     <p>
